--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-PyPDF2
-ollama
-sqlite3
-langchain
-numpy
-scikit-learn
-jupyter
-sentence-transformers
+PyPDF2==3.0
+ollama==0.3
+langchain==0.3
+numpy==1.26
+scikit-learn==1.3
+jupyter==1.0
+sentence-transformers==3.2
